contrast fixed

--- a/css/small.css
+++ b/css/small.css
@@ -9,7 +9,5 @@
         margin: auto;   
     }
 
-    ul{
-        margin-block-start: 0;
-    }
+    
 }
