--- a/lesson-4/css/normalize.css
+++ b/lesson-4/css/normalize.css
@@ -9,7 +9,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #3685B5;
+    background: #035487
 
 }
 header h1 {
@@ -85,9 +85,12 @@ h2{
 /* Footer rules here */
     footer{
         display: block;
-        background-color: #3685B5;
+        background: #035487
         padding: 1em;
         border-radius: 12px;
         text-align: center;
         clear: both;
+    }
+    footer a {
+        color: rgb(246, 250, 0)
     }
